--- a/ros2_ws/src/py_pubsub/package.xml
+++ b/ros2_ws/src/py_pubsub/package.xml
@@ -12,6 +12,7 @@
   <test_depend>ament_pep257</test_depend>
   <test_depend>python3-pytest</test_depend>
   <depend>rover2_control_interface</depend>
+  <depend>rover2_status_interface</depend>
 
   <export>
     <build_type>ament_python</build_type>
