changed ros2 package

--- a/ros2_ws/src/AutonControlNode/package.xml
+++ b/ros2_ws/src/AutonControlNode/package.xml
@@ -3,18 +3,23 @@
 <package format="3">
   <name>AutonControlNode</name>
   <version>0.0.0</version>
-  <description>TODO: Package description</description>
+  <description>Autonomous control node package</description>
   <maintainer email="matt@todo.todo">matt</maintainer>
   <license>TODO: License declaration</license>
-
+  
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
   <test_depend>ament_pep257</test_depend>
   <test_depend>python3-pytest</test_depend>
   
-  <build_depend>rosidl_default_generators</build_depend>
-  <exec_depend>rosidl_default_runtime</exec_depend>
-
+  <!-- Add dependency on your interface package -->
+  <exec_depend>auton_control_interfaces</exec_depend>
+  
+  <!-- Standard ROS 2 dependencies -->
+  <depend>rclpy</depend>
+  <depend>std_msgs</depend>
+  <depend>geometry_msgs</depend>
+  
   <export>
     <build_type>ament_python</build_type>
   </export>
